--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#fff461</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#00fbff</color>
+    <color name="white">#FFFFFF</color>
 </resources>
