--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -47,9 +47,18 @@
             android:textAllCaps="false"
             android:background="@color/colorPrimaryDark"
             android:textColor="@color/white"
-            android:layout_margin="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:padding="8dp"
-            android:text="Share to Reading >" />
+            android:gravity="center"
+            android:drawablePadding="2dp"
+            android:drawableRight="@drawable/ic_navigate_next_white_24dp"
+            android:drawableEnd="@drawable/ic_navigate_next_white_24dp"
+            android:text="Share to Reading" />
 
     </LinearLayout>
 
