--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,38 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/email_prompt"
+        android:layout_marginBottom="8dp"
+        android:textSize="18sp"
+        android:text="Your Reading.am email" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/email_prompt"
+        android:id="@+id/email_hint"
+        android:background="@color/colorAccent"
+        android:padding="12dp"
+        android:layout_marginBottom="8dp"
+        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
+        android:text="Copy the email from the Post Via Email section of your Reading.am Settings page (under Extras). Click here to find it."/>
+
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/email_input"
+        android:layout_below="@id/email_hint"
+        android:layout_alignStart="@id/email_prompt"
+        android:layout_alignLeft="@id/email_prompt"
+        android:layout_alignRight="@id/email_prompt"
+        android:layout_alignEnd="@id/email_prompt"/>
+
+    <TextView
+        android:text="Save"
+        android:id="@+id/save_button"
+        android:layout_toRightOf="@id/email_input"
+        android:layout_toEndOf="@id/email_input"
+        android:layout_alignBottom="@id/email_input"
+        style="@style/SendButton"/>
+
 </RelativeLayout>
