--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,17 +27,17 @@
         android:padding="12dp"
         android:layout_marginBottom="8dp"
         android:drawableRight="@drawable/ic_navigate_next_black_24dp"
-        android:text="Copy the email from the Post Via Email section of your Reading.am Settings page (under Extras). Click here to find it."/>
+        android:text="Click here to find your email address for Post Via Email."/>
 
     <EditText
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:hint="...@mailman.reading.am"
         android:id="@+id/email_input"
         android:layout_below="@id/email_hint"
+        android:lines="1"
         android:layout_alignStart="@id/email_prompt"
-        android:layout_alignLeft="@id/email_prompt"
-        android:layout_alignRight="@id/email_prompt"
-        android:layout_alignEnd="@id/email_prompt"/>
+        android:layout_alignLeft="@id/email_prompt"/>
 
     <TextView
         android:text="Save"
