--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/email_prompt"
         android:id="@+id/email_hint"
-        android:background="@color/colorAccent"
+        android:textColor="@color/black_to_white"
+        android:background="@drawable/accent_to_black"
         android:padding="12dp"
         android:layout_marginBottom="8dp"
         android:drawableRight="@drawable/ic_navigate_next_black_24dp"
@@ -35,6 +36,8 @@
         android:hint="...@mailman.reading.am"
         android:id="@+id/email_input"
         android:layout_below="@id/email_hint"
+        android:inputType="textEmailAddress"
+        android:imeOptions="actionSend"
         android:lines="1"
         android:layout_alignStart="@id/email_prompt"
         android:layout_alignLeft="@id/email_prompt"/>
