--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:id="@+id/email_prompt"
         android:layout_marginBottom="8dp"
         android:textSize="18sp"
-        android:text="Your Reading.am email" />
+        android:text="@string/your_reading_am_post_via_email_address" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,7 +28,8 @@
         android:padding="12dp"
         android:layout_marginBottom="8dp"
         android:drawableRight="@drawable/ic_navigate_next_black_24dp"
-        android:text="Click here to find your email address for Post Via Email."/>
+        android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
+        android:text="@string/click_here_to_find_your_post_via_email_address"/>
 
     <EditText
         android:layout_width="wrap_content"
