--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:padding">8dp</item>
         <item name="android:gravity">center</item>
+        <item name="android:clickable">true</item>
     </style>
 
     <style name="OpinionButton" parent="OverlayButton">
