--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,20 +51,13 @@
         android:layout_alignBottom="@id/email_input"
         style="@style/SendButton"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/email_input"
-        android:layout_margin="32dp"
-        android:id="@+id/divider"
-        android:background="@color/colorPrimaryDark" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/opinion_prompt"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
-        android:layout_below="@id/divider"
+        android:layout_below="@id/email_input"
         android:textSize="18sp"
         android:text="@string/want_the_option_to_say_yep_nope_on_a_link" />
 
